--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -25,7 +25,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.scheduler.Add_activity"
+            android:name="com.example.scheduler.Add_Activity"
             android:label="@string/title_activity_add_activity" >
         </activity>
     </application>
