--- a/project.properties
+++ b/project.properties
@@ -13,4 +13,5 @@
 # Project target.
 target=android-18
 android.library.reference.1=..\\..\\abs
-android.library.reference.2=../HoloColorPicker-master
+android.library.reference.2=..\\HoloColorPicker-master
+android.library.reference.3=../library
