--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -10,9 +10,11 @@
     
     <!-- Uses email to identify database Table name on Cloud -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 
     <application
         android:allowBackup="true"
@@ -25,7 +27,6 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -44,6 +45,11 @@
             android:theme="@style/Theme.Sherlock"
             android:label="@string/title_activity_month_activity">
         </activity>
+        
+        <service android:name=".Alarm_Module"
+                 android:enabled="true" />
+        <receiver android:name=".Receiver_Module"/>
+        
     </application>
 
 </manifest>
