--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,6 @@
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon"
@@ -46,9 +45,9 @@
             android:label="@string/title_activity_month_activity">
         </activity>
         
-        <service android:name=".Alarm_Module"
+        <service android:name="com.example.scheduler.Alarm_Module"
                  android:enabled="true" />
-        <receiver android:name=".Receiver_Module"/>
+        <receiver android:name="com.example.scheduler.Receiver_Module"/>
         
     </application>
 
