--- a/project.properties
+++ b/project.properties
@@ -14,4 +14,5 @@
 target=android-18
 android.library.reference.1=..\\..\\abs
 android.library.reference.2=..\\HoloColorPicker-master
-android.library.reference.3=../library
+android.library.reference.3=..\\library
+android.library.reference.4=../Library-ListViewAnimations
